# Game_engines_LR3

src/: CMakeLists.txt  config.txt  main.cpp
src/Configs/: assets.txt  level.txt
src/Ecs/: CMakeLists.txt
src/Ecs/Managers/: RestartManager.cpp  RestartManager.h  ScoreManager.cpp  ScoreManager.h
src/Ecs/ReadConfig/: ReadConfig.cpp  ReadConfig.h
src/Ecs/Window/: Window.cpp  Window.h
src/GameEngine/: GameEngine.cpp  GameEngine.h  GameEngineConfiguration.h  Scene.cpp  Scene.h
src/GameEngine/Assets/: Animation.cpp  AssetManager.cpp  AssetManager.h
src/GameEngine/Grid/: Grid.cpp  Grid.h
src/GameEngine/Input/: InputAction.cpp  InputManager.cpp
src/GameEngine/Scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h
src/Sample/Components/: CollisionComponent.h  GravityComponent.h  ShooterComponent.h  SpriteComponent.h
src/Sample/Systems/: AsteroidSpawnSystem.cpp  AsteroidSpawnSystem.h  CollisionResolveSystem.cpp  CollisionResolveSystem.h  CollisionSystem.cpp  DefaultCameraSystem.cpp  DefaultCameraSystem.h  EntityFactory.cpp  EntityFactory.h  FollowXCameraSystem.cpp  FollowXCameraSystem.h  GroundedResetSystem.cpp  GroundedResetSystem.h  InitSystem.cpp  MovementSystem.cpp  MovementSystem.h  PlayerAnimationSystem.cpp  PlayerAnimationSystem.h  RenderSystem.cpp  RenderSystem.h  ShootingSystem.cpp  ShootingSystem.h
src/UI/: Button.cpp  Button.h  Text.cpp  Text.h
